--- a/README
+++ b/README
@@ -1,3 +1,17 @@
+A MySQL database will be needed to run this application.  The application needs to connect to a database named "go" with user/pass of "go"/"GO" on localhost.
+
+You will need a properly set up go environment with the environment variable GOPATH set.
+mkdir ~/go && export GOPATH=~/go
+
 go get github.com/go-sql-driver/mysql
 go get github.com/gorilla/mux
+go get github.com/chipmanc/go_challenge/
+go install github.com/chipmanc/go_challenge/go_challenge_server
+go install github.com/chipmanc/go_challenge/go_challenge_load_db
 
+To load a blacklist:
+~/go/bin/go_challenge_load_db <FILE WITH URLS OR NET LOCATION OF BLACKLIST>
+i.e.  ~/go/bin/go_challenge_load_db https://zeustracker.abuse.ch/blocklist.php?download=compromised
+
+To start server:
+~/go/bin/go_challenge_server
